# bazel-issues

./: .bazelrc  Anno.java  BUILD  BUILD.bazel  Bug.java  BugAnnotation.java  BugDep.java  BugDep1.java  BugDep2.java  C1.java  C2.java  ExampleCheck.java  ExampleConsumer.java  LICENSE  Main.java  Outer.java  Proc.java  README.md  WORKSPACE  defs.bzl
